--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
-elm-stuff/
-node_modules/
-tmp/
-dist/
-yarn.lock
+# Distribution
+build/
 
+# elm-package generated files
+elm-stuff
+
+# elm-repl generated files
+repl-temp-*
+
+# Dependency directories
+node_modules
+
+# Desktop Services Store on macOS
+.DS_Store
