--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 node_js:
   - "9"
 before_script:
+  - nvm install && nvm use
   - npm install --global create-elm-app 
   - elm-app install -y
 script:
