--- a/kustomize/pomodoro.yaml
+++ b/kustomize/pomodoro.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - image: mstruebing/elmodoro:latest
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           name: pomodoro
 
 ---
