--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,12 +1,12 @@
 name: ci
 
 on:
+  pull_request:
   push:
-    branches:
-      - "main"
+    branches: [main]
 
 jobs:
-  docker:
+  ci:
     runs-on: ubuntu-latest
     steps:
       - name: Set current date as env variable
@@ -14,9 +14,10 @@ jobs:
         run: echo "::set-output name=timestamp::$(date +'%s')"
 
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Install devbox
+        uses: jetpack-io/devbox-install-action@v0.6.0
         with:
-          node-version-file: ".node-version"
+          enable-cache: true
 
       - run: npm ci
       - run: npm run format:validate
@@ -36,5 +37,5 @@ jobs:
         env:
           TAG_NAME: ${{ steps.tagname.outputs.timestamp }}
         with:
-          push: true
+          push: ${{ github.ref_name == 'main' }}
           tags: mstruebing/elmodoro:${{ steps.tagname.outputs.timestamp }}
