ci: add dependabot config for github actions

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,12 @@ updates:
     directory: "/"
     schedule:
       interval: daily
-      day: "sunday"
+      time: "04:00"
+    open-pull-requests-limit: 10
+
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: daily
       time: "04:00"
     open-pull-requests-limit: 10
